# meralus

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
addons/core/: package.toml
addons/core/resources/models/: tech_test.json
addons/core/src/: main.mol
addons/test/: package.toml
addons/test/src/: main.mol
crates/addons/: Cargo.toml
crates/addons/src/: lib.rs
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs  player.rs  value.rs
crates/animation/src/curves/: elastic.rs  interval.rs  mod.rs  split.rs  three_point_cubic.rs
crates/app/: Cargo.toml
crates/app/resources/shaders/: shape.fs  shape.vs  text.fs
crates/app/src/: aabb.rs  bfs_light.rs  blocks.rs  camera.rs  clock.rs  game.rs  input.rs  keyboard.rs  main.rs  player.rs  progress.rs  ui.rs  util.rs  world.rs
crates/app/src/loaders/: block.rs  block_model.rs  mod.rs  texture.rs
crates/app/src/renderers/: mod.rs  shape.rs  text.rs  voxel.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/graphene/: Cargo.toml
crates/graphene/src/: color.rs  common.rs  lib.rs
crates/graphene/src/geometry/: mod.rs  round_rect.rs  thickness.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: common.rs  context.rs  lib.rs  shape.rs  text.rs  voxel.rs
crates/graphics/src/ellay/: mod.rs
crates/graphics/src/ellay/element/: canvas.rs  column.rs  mod.rs  text.rs
crates/graphics/src/ellay/style/: mod.rs
crates/io/: Cargo.toml
crates/io/src/: block_model.rs  block_states.rs  entity_model.rs  lib.rs
crates/lessor/: Cargo.toml
crates/lessor/src/: lib.rs
crates/meck/: Cargo.toml
crates/meck/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  lib.rs  packet.rs  protocol.rs  server.rs
crates/physics/: Cargo.toml
crates/physics/src/: aabb.rs  body.rs  context.rs  lib.rs  raycast.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: color.rs  convert.rs  face.rs  frustum.rs  lerp.rs  lib.rs  random.rs  util.rs
crates/shared/src/geometry/: box2d.rs  cube.rs  mod.rs  rect.rs  round_rect.rs
crates/shared/src/network/: client.rs  packet.rs
crates/storage/: Cargo.toml
crates/storage/src/: block.rs  block_model.rs  block_states.rs  entity.rs  lib.rs  texture.rs
crates/tween/: Cargo.toml
crates/tween/src/: lib.rs
crates/tween/src/curves/: bounce.rs  cubic.rs  decelerate.rs  interval.rs  linear.rs  mod.rs  saw_tooth.rs  split.rs  step.rs  three_point_cubic.rs  threshold.rs
crates/world/: Cargo.toml
crates/world/src/: bfs_light.rs  biome.rs  chunk.rs  chunk_manager.rs  lib.rs  random.rs
crates/world/src/block/: face.rs  mod.rs  state.rs
crates/world/src/entity/: mod.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: biome.rs  chunk.rs  lakes.rs  lib.rs  mod.rs  trees.rs
crates/worldgen/src/noise/: fbm.rs  mod.rs  perlin.rs
mollie/: Cargo.toml  README.md
mollie/crates/compiler/: Cargo.toml  parse
mollie/crates/compiler/src/: error.rs  lib.rs  ty.rs
mollie/crates/compiler/src/statement/: component_decl.rs  enum_decl.rs  implementation.rs  mod.rs  struct_decl.rs  trait_decl.rs  variable_decl.rs
mollie/crates/compiler/src/statement/expression/: array.rs  as_expr.rs  binary.rs  block.rs  call.rs  enum_path.rs  ident.rs  if_else.rs  index.rs  literal.rs  mod.rs  node.rs  type_index.rs  while_expr.rs
mollie/crates/compiler/tests/: hell.mol
mollie/crates/lexer/src/: lib.rs  token.rs
mollie/crates/parser/src/: lib.rs  ty.rs
mollie/crates/parser/src/statement/: component_decl.rs  implementation.rs  mod.rs  struct_decl.rs  trait_decl.rs  variable_decl.rs
mollie/crates/parser/src/statement/expression/: array.rs  as_expr.rs  binary.rs  block.rs  call.rs  enum_path.rs  if_else.rs  index.rs  literal.rs  mod.rs  node.rs  while_expr.rs
mollie/crates/shared/: Cargo.toml
mollie/crates/shared/src/: lib.rs  pretty_fmt.rs  span.rs
mollie/crates/vm/: Cargo.toml
mollie/crates/vm/src/: inst.rs  lib.rs  ty.rs  value.rs
mollie/crates/vm/src/ty/: array.rs  component.rs  enumeration.rs  function.rs  kind.rs  primitive.rs  structure.rs
resources/: .view.ml  view.mol
resources/entity_models/: floating.json  player.json
resources/models/: air.json  cuboid.json  cuboid_all_same.json  dirt.json  grass_block.json  green_glass_block.json  ice.json  oak_leaves.json  oak_log.json  sand.json  snow.json  stone.json  torch.json  water.json  wood.json
resources/shaders/: bloom.fs  bloom.vs  downscale.fs  particle.fs  particle.vs  shape-es.fs  shape-es.vs  shape.fs  shape.vs  upscale.fs  upscale.vs  voxel.fs  voxel.vs  voxel.wgsl
resources/states/: air.json  dirt.json  grass_block.json
resources/views/: MainMenu.mol
schemas/: model.json
support-crates/bending/: Cargo.toml
support-crates/bending/src/: bend_applier.rs  cuboid.rs  lib.rs  plane.rs  quad.rs
support-crates/horns/: Cargo.toml
support-crates/horns/src/: backend.rs  error.rs  index_buffer.rs  lib.rs  render_pass.rs  shader.rs  texture.rs  vertex_buffer.rs
support-crates/ui/: Cargo.toml
support-crates/ui/src/: lib.rs
