[workspace]
members = ["bin/*", "crates/*", "support-crates/*"]
resolver = "2"

[workspace.dependencies]
meralus-addons = { path = "./crates/addons" }
meralus-tween = { path = "./crates/tween" }
meralus-engine = { path = "./crates/engine" }
meralus-network = { path = "./crates/network" }
meralus-physics = { path = "./crates/physics" }
meralus-shared = { path = "./crates/shared" }
meralus-io = { path = "./crates/io" }
meralus-storage = { path = "./crates/storage" }
meralus-world = { path = "./crates/world" }
meralus-worldgen = { path = "./crates/worldgen" }
meck = { path = "./crates/meck" }
horns = { path = "./support-crates/horns" }

ahash = "0.8.12"
image = { version = "0.25.9", default-features = false }
tokio = "1.50.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
