[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
mavelin-addons = { path = "./crates/addons" }
mavelin-tween = { path = "./crates/tween" }
mavelin-engine = { path = "./crates/engine" }
mavelin-network = { path = "./crates/network" }
mavelin-physics = { path = "./crates/physics" }
mavelin-shared = { path = "./crates/shared" }
mavelin-io = { path = "./crates/io" }
mavelin-storage = { path = "./crates/storage" }
mavelin-world = { path = "./crates/world" }
mavelin-worldgen = { path = "./crates/worldgen" }
meck = { path = "./crates/meck" }

glam = { version = "0.33.1", features = ["bytemuck"] }
ahash = "0.8.12"
image = { version = "0.25.9", default-features = false }
tokio = "1.50.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lasso = { version = "0.7.3", features = ["ahasher", "inline-more"] }

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }

[workspace.lints.rust]
unused_crate_dependencies = "deny"


[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
