[package]
name = "meralus-app"
version = "0.1.0"
edition = "2024"

[dependencies]
meralus-animation = { workspace = true }
meralus-world = { workspace = true }
meralus-engine = { workspace = true }
meralus-shared = { workspace = true, features = ["network"] }
meck = { workspace = true }
lessor = { workspace = true }
glium = { workspace = true }
glam = { workspace = true }
glamour = { workspace = true }
noise = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-compression = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
image = "0.25.6"
fontdue = { git = "https://github.com/Aiving/fontdue.git", features = ["std"] }
owo-colors = "4.2.0"
ahash = { workspace = true }
lyon_tessellation = "1.0.15"

[lints]
workspace = true

[dev-dependencies]
float-cmp = "0.10.0"
