[package]
name = "mavelin-io"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
ahash.workspace = true
mavelin-shared = { workspace = true, features = ["geometry", "face", "serde"] }
mavelin-world = { workspace = true, features = ["serde"] }
serde_json.workspace = true
toml = "1.1.2"
glam.workspace = true

[lints]
workspace = true
