[package]
name = "meralus-network"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.41", features = ["zlib", "tokio"] }
tokio = { workspace = true, features = ["net"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-serde = "0.9.0"
bson = "2.15.0"
futures = { version = "0.3.32", features = ["std"] }
uuid = { version = "1.21.0", features = ["v4"] }
serde.workspace = true
meralus-shared.workspace = true

[lints]
workspace = true
