[package]
name = "meralus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
meralus-world = { workspace = true }
meralus-shared = { workspace = true, features = ["network"] }
glam = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-compression = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
