[package]
name = "meralus-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { workspace = true }
glamour = { workspace = true }
serde = { workspace = true, optional = true }
bson = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-serde = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
lyon_tessellation = { version = "1.0.15", optional = true }

[dev-dependencies]
lyon_tessellation = "1.0.15"

[features]
default = []
lyon-path-api = ["dep:lyon_tessellation"]
network = [
    "dep:uuid",
    "dep:serde",
    "dep:bson",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-serde",
    "dep:futures",
]

[lints]
workspace = true
