[package]
name = "meralus-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.10", features = ["serde", "bytemuck"] }
glamour = { version = "0.18.0", features = ["serde"] }
serde = { workspace = true, optional = true }
lyon_tessellation = { version = "1.0.16", optional = true }

[dev-dependencies]
lyon_tessellation = "1.0.16"

[features]
default = []
lyon-path-api = ["dep:lyon_tessellation"]

[lints]
workspace = true
