[package]
name = "meralus-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.10", features = ["bytemuck"], optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
color = []
convert = []
face = []
frustum = []
geometry = ["dep:glam"]
lerp = []
random = []
serde = ["dep:serde", "glam?/serde"]

[lints]
workspace = true
