[package]
name = "mavelin-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash.workspace = true
mavelin-physics.workspace = true
mavelin-shared = { workspace = true, features = [
    "geometry",
    "color",
    "face",
    "serde",
] }
mavelin-io.workspace = true
mavelin-world.workspace = true
meck.workspace = true
image = { workspace = true, features = ["png"] }
tracing = "0.1.44"
glam.workspace = true

[lints]
workspace = true
