[package]
name = "meralus-world"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash.workspace = true
meralus-shared = { workspace = true, features = ["face"] }
serde = { workspace = true, optional = true }
tracing = "0.1.44"

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
