[package]
name = "mavelin-world"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash.workspace = true
lasso.workspace = true
mavelin-shared = { workspace = true, features = ["face"] }
serde = { workspace = true, optional = true }
glam.workspace = true

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
