[package]
name = "mollie-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
mollie-shared = { workspace = true }
# mollie-lexer = { workspace = true }
# mollie-parser = { workspace = true }
derive_more = { workspace = true }
indexmap = { workspace = true }
smallvec = { git = "https://github.com/servo/rust-smallvec.git" }
serde = { version = "1.0.219", features = ["derive", "rc"] }

[lints]
workspace = true
